-- Release 0.16 --

2004-05-25  Stefan Petersen  <spe@stacken.kth.se>

	* src/draw_amacro.c: Now aperture macros handles exposures properly,
	  so some thermals can be drawn properly. Inspired by discussion with
	  Dimitri.


2004-05-19  Stefan Petersen  <spe@stacken.kth.se>

	* man/gerbv.1.in, src/Makefile.am, src/drill.c, src/gerbv.c, 
	  src/tooltable.c, src/tooltable.h: Patch from Dimitri 
	  (lastname unknown) to read tool files from for instance Eagle CAD.

2004-04-27  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in, src/drill.c: Patch from Tomasz Motylewski as a start
	  remove dependencies on mmap et al (sys/mman.h) for targets lacking
	  these operations (mingw).

2004-04-21  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Added keys f for fit, z for zoom in and Z for zoom out
	  after request from Stefan Thiede.

2004-04-04  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerb_file.[hc], src/drill.c, src/amacro.c, gerber.c:
	  Changed gerb_fgetint() so it can return number of parsed characters.
	  This is useful when parsing coordinates in omit trailing zeros mode.
	  Omit trailing zeros is also handled properly now. Reported by Joachim
	  Jansen and filed as bug #918344.
	
2004-02-24  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerbv.c: Apperently under GTK2 both delete_event and destroy
	  signals is emitted when you press the little cross in the 
	  decoration bar. When both signals were emitted gerbv tried to free
	  the same memory twice.

2004-02-14  Stefan Petersen  <spe@stacken.kth.se>

	* src/Makefile.am: Making sure init.scm is copied to the right 
	  place at install.

2004-02-13  Stefan Petersen  <spe@stacken.kth.se>

	* src/gerber.c: The good old circles revisited. This time Dan
	  noticed that circles with the same start and end point did not 
	  draw properly ie as circles. It became points.

2004-02-08  Stefan Petersen  <spe@stacken.kth.se>

	* configure.in: Apperently auto* doesn't define $prefix if you