@@ -15,3 +15,6 @@ stamp-h
 stamp-h1
 stamp-h.in
 config.cache
+Makefile
+Makefile.in
+depcomp
