@@ -1,0 +1,20 @@
+Makefile
+Makefile.in
+*.o
+*.a
+*.lib
+*.so
+gerbv
+config.*
+configure
+autom4te.cache
+.deps
+aclocal.m4
+foo.drl
+*~
+stamp-h1
+gerbv.1
+CVS
+depcomp
+install-sh
+missing
