@@ -19,10 +19,13 @@ short options are available.
 .BI -V|--version
 Prints the version number of gerbv and exits.
 .TP
+.BI -h|--help
+Prints a brief usage guide.
+.TP
 .BI -l\ <filename>|--log=<filename>
 All error messages etc are stored in a file with filename \fI<filename>\fP.
 .TP
-.BI --tools=<tools-filename>
+.BI -t\ <filename>|--tools=<filename>
 Read Excellon tools from the file \fI<filename>\fP.
 .TP
 .BI --geometry=<width>x<height>[<+->x-position[<+->y-position]]
@@ -174,6 +177,7 @@ A standard practice with Eagle is to create an empty Tools file, run the
 CAM processor, and the error report tells you which tools you "forgot".
 Then you put these tools into the file and rerun the CAM processor.
 
+You load a tool file by using the commandline switches -t or --tools.
 The file can have any name you wish, but Eagle expects the file type to
 be ".drl", so it makes sense to keep it this way. Some board houses are
 still using CAM software from DOS era, so you may want to excercise caution
@@ -196,8 +200,8 @@ will see warnings printed on the console.
 
 .SH "ENVIRONMENT"
 .IP GERBV_SCHEMEINIT
-Defines where init.scm file is stored. Used by scheme interpreter, which is 
-used by project reader.
+Defines where the init.scm file is stored. Used by scheme interpreter, which 
+is used by the project reader.
 
 .SH "AUTHOR"
 .nf
