@@ -1,3 +1,8 @@
+2004-06-05  Stefan Petersen  <spe@stacken.kth.se>
+
+	* */.cvsignore, man/gerbv.1.in, src/gerbv.c: Minor updates and 
+	  cleanups from Dimitri. --help added for instance.
+
 -- Release 0.16 --
 
 2004-05-25  Stefan Petersen  <spe@stacken.kth.se>
